feat: reorganize packages and add authentication
