# internal/server/router.go
@@ -1,21 +1,18 @@
 package server
 
 import (
-	"context"
-	"fmt"
 	"net/http"
 	"os"
-	"strconv"
 	"time"
 
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
 	"github.com/go-chi/docgen"
-	"github.com/go-chi/render"
-	"github.com/padurean/purest/controllers"
-	"github.com/padurean/purest/database"
-	"github.com/padurean/purest/env"
-	"github.com/padurean/purest/logging"
+	"github.com/padurean/purest/internal"
+	"github.com/padurean/purest/internal/controller"
+	"github.com/padurean/purest/internal/database"
+	"github.com/padurean/purest/internal/env"
+	"github.com/padurean/purest/internal/logging"
 	"github.com/rs/zerolog/hlog"
 
 	// init Swagger API Docs
@@ -23,20 +20,12 @@ import (
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-// ContextKey ...
-const (
-	ContextKeyDB       controllers.ContextKey = "db"
-	ContextKeyPage     controllers.ContextKey = "page"
-	ContextKeyPageSize controllers.ContextKey = "pageSize"
-	// ...
-)
-
 // Router ...
 type Router struct {
 	chi.Router
 }
 
-func (router Router) setupMiddlewares(db *database.DB, logger *logging.Logger) {
+func (router Router) setupCommonMiddlewares(db *database.DB, logger *logging.Logger) {
 	router.Use(
 		middleware.RequestID,
 		middleware.RealIP,
@@ -47,7 +36,7 @@ func (router Router) setupMiddlewares(db *database.DB, logger *logging.Logger) {
 		// processing should be stopped.
 		middleware.Timeout(60*time.Second),
 		// set DB connection on request context
-		middleware.WithValue(ContextKeyDB, db),
+		middleware.WithValue(internal.ContextKeyDB, db),
 
 		//--> logging middleware
 		hlog.NewHandler(*logger.Logger),
@@ -75,33 +64,6 @@ func (router Router) setupMiddlewares(db *database.DB, logger *logging.Logger) {
 	}
 }
 
-const pageSizeDefault = 20
-
-func paginate(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		page := 1
-		var err error
-		if pageParam := r.URL.Query().Get(string(ContextKeyPage)); pageParam != "" {
-			page, err = strconv.Atoi(pageParam)
-			if err != nil {
-				render.Render(w, r, controllers.ErrBadRequest(fmt.Errorf("'page' url param '%s' is not an integer number", pageParam)))
-				return
-			}
-		}
-		pageSize := pageSizeDefault
-		if pageSizeParam := r.URL.Query().Get(string(ContextKeyPageSize)); pageSizeParam != "" {
-			pageSize, err = strconv.Atoi(pageSizeParam)
-			if err != nil {
-				render.Render(w, r, controllers.ErrBadRequest(fmt.Errorf("'pageSize' url param '%s' is not an integer number", pageSizeParam)))
-				return
-			}
-		}
-		ctx := context.WithValue(r.Context(), ContextKeyPage, page)
-		ctx = context.WithValue(ctx, ContextKeyPageSize, pageSize)
-		next.ServeHTTP(w, r.WithContext(ctx))
-	})
-}
-
 func (router Router) setupRoutes() {
 	router.Get("/", func(w http.ResponseWriter, r *http.Request) {
 		msg := "Hello, my name is puREST. Pleased to meet you! :)"
@@ -119,15 +81,16 @@ func (router Router) setupRoutes() {
 		router.Route("/v1", func(router chi.Router) {
 
 			router.Route("/users", func(router chi.Router) {
-				router.Post("/", controllers.UserCreate)
-				router.With(paginate).Get("/", controllers.UserList)
-				router.Route("/{id}", func(router chi.Router) {
-					router.Use(controllers.UserCtx)
-					router.Get("/", controllers.UserGet)
-					router.Put("/", controllers.UserUpdate)
-					router.Delete("/", controllers.UserDelete)
+				router.With(controller.UserCtx).Post("/sign-in/{usernameOrEmail}", controller.UserSignIn)
+				routerWithAuth := router.With(authenticate)
+				routerWithAuth.Post("/", controller.UserCreate)
+				routerWithAuth.With(paginate).Get("/", controller.UserList)
+				routerWithAuth.Route("/{id}", func(router chi.Router) {
+					router.Use(controller.UserCtx)
+					router.Get("/", controller.UserGet)
+					router.Put("/", controller.UserUpdate)
+					router.Delete("/", controller.UserDelete)
 				})
-				router.With(controllers.UserCtx).Post("/sign-in/{usernameOrEmail}", controllers.UserSignIn)
 			})
 
 		})
@@ -140,7 +103,7 @@ func (router Router) generateAPIDocs(logger *logging.Logger) {
 		ProjectPath: "github.com/padurean/purest",
 		Intro:       "Welcome to the puREST generated docs!",
 	})
-	mdDocsFilename := "docs/docs.md"
+	mdDocsFilename := "API-docs.md"
 	mdDocsFile, err := os.Create(mdDocsFilename)
 	if err != nil {
 		logger.Err(err).Msgf("error creating API docs markdown file %s", mdDocsFilename)
@@ -155,7 +118,7 @@ func (router Router) generateAPIDocs(logger *logging.Logger) {
 
 // Setup ...
 func (router Router) Setup(db *database.DB, logger *logging.Logger) {
-	router.setupMiddlewares(db, logger)
+	router.setupCommonMiddlewares(db, logger)
 	router.setupRoutes()
 	if env.GetAppEnv() == env.Development {
 		router.generateAPIDocs(logger)
